2008-02-03  Christian Dywan  <christian@imendio.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=17046
        [GTK] Context menu fixes and customisation suport

        Provide standard GTK+ context menu items where appropriate.


Canonical link: https://commits.webkit.org/23779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29958 268f45cc-cd09-0410-ab3c-d52691b4dbfc